<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_layout_frtitle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/friend_tv_friends"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x110"
            android:drawableRight="@mipmap/enter"
            android:padding="@dimen/x24"
            android:gravity="center_vertical"
            android:textSize="@dimen/x32"
            android:textColor="@color/text_black"
            android:text="@string/friend" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/line_gray"/>
        <TextView
            android:id="@+id/friend_tv_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x110"
            android:drawableRight="@mipmap/enter"
            android:padding="@dimen/x24"
            android:gravity="center_vertical"
            android:textSize="@dimen/x32"
            android:textColor="@color/text_black"
            android:text="@string/group" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x24"
            android:background="@color/line_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/x24"
            android:paddingTop="@dimen/x32"
            android:gravity="bottom"
            android:textSize="@dimen/x32"
            android:textColor="@color/text_black"
            android:text="@string/group_hot" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/frafriend_rc_group"
            android:layout_width="match_parent"
           android:layout_height="match_parent"/>

    </LinearLayout>



</LinearLayout>