<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_layout"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x24"
        android:background="@color/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x248"
        android:paddingLeft="@dimen/x24"
        android:paddingRight="@dimen/x24"
        android:orientation="vertical">
        <com.wowo.wowo.Views.CircleImageView.CircleImageView
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x100"
            android:src="@mipmap/addressbook"
            android:layout_marginTop="@dimen/x30"
            android:layout_marginBottom="@dimen/x30"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/x22"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/main_color"
            android:maxLines="3"
            android:text="@string/agreement"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/line_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingRight="@dimen/x24"
            android:paddingLeft="@dimen/x24"
            android:layout_height="@dimen/x100">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/x30"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:text="@string/nickname"
                android:paddingRight="@dimen/x24"/>
            <TextView
                android:id="@+id/fd_tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/x30"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:maxLength="13"
                android:text="司马"
                android:paddingRight="@dimen/x24"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/boy"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/line_gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingRight="@dimen/x24"
            android:paddingLeft="@dimen/x24"
            android:layout_height="@dimen/x100">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/x30"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:text="@string/remake"
                android:paddingRight="@dimen/x24"/>
            <TextView
                android:id="@+id/fd_tv_remake"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/x30"
                android:gravity="center"
                android:textColor="@color/text_black"
                android:maxLength="13"
                android:text="司马"
                android:paddingRight="@dimen/x24"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/line_gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:paddingLeft="@dimen/x36"
        android:paddingRight="@dimen/x36"
        android:orientation="vertical">
        <Button
            android:id="@+id/frdet_bt_remake"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x88"
            android:textColor="@color/white"
            android:text="@string/remake_edit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/backround_bt_maincolor"/>

        <Button
            android:id="@+id/frdet_bt_delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x88"
            android:layout_marginTop="@dimen/x36"
            android:textColor="@color/text_black"
            android:text="@string/delete_friend"
            android:layout_marginBottom="@dimen/x36"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/backround_bt_gary"/>
    </LinearLayout>

</LinearLayout>